--- a/angular/app/app.css
+++ b/angular/app/app.css
@@ -28,3 +28,30 @@
   content: "";
   padding: 0;
 }
+
+.special-img 
+{
+    position: relative;
+    top: -10px;
+    float: left;
+    left: -5px;
+}
+
+.imageHolder
+{
+    display: inline-block;
+    position: relative;
+}
+
+.imageHolder .caption{
+    position: absolute;
+    text-align:center; 
+    font-weight:bold;
+    opacity:0.7; 
+    background-color: rgba(15, 15, 15, 0.93);
+    color: #fff;
+    bottom: 0px;
+    text-align: left;
+    padding: 20px 15px 20px 15px;
+    width:100%;
+}
