--- a/angular/app/layout/layout.html
+++ b/angular/app/layout/layout.html
@@ -11,10 +11,10 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li ui-sref="master.login"><a href="#">Logowanie</a></li>
-          <li ui-sref="master.register"><a href="#">Rejestracja</a></li>
-          <li><a href="#">Projekty <span class="sr-only">(current)</span></a></li>
-          <li class="active"><a ui-sref="master.bugs">Błędy</a></li>
+          <li ng-hide="isAuth"><a ui-sref="master.login"  href="#/login">Logowanie</a></li>
+          <li ng-hide="isAuth"><a ui-sref="master.register" href="#/register">Rejestracja</a></li>
+          <li ng-show="isAuth" ui-sref-active="active"><a ui-sref="master.projects" href="#/projects">Projekty</a></li>
+          <li ng-show="isAuth" ui-sref-active="active"><a ui-sref="master.bugs" href="#/bugs">Błędy</a></li>
           <!--<li class="dropdown">-->
             <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
             <!--<ul class="dropdown-menu">-->
@@ -28,14 +28,28 @@
             <!--</ul>-->
           <!--</li>-->
         </ul>
+        <ul class="nav navbar-nav navbar-right" ng-show="isAuth">
+            <!--<li><img src="https://randomuser.me/api/portraits/women/22.jpg" height="45" class="img-circle"</li>-->
+            <!--<li><a href="#">Wyloguj</a></li>-->
+            <li class="dropdown">
+                <a href="javascript:void(0);" class="dropdown-toggle profile-image" data-toggle="dropdown">
+                    <img src="https://randomuser.me/api/portraits/women/22.jpg" height="40"  class="img-circle special-img"> {{firstName}} <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="javascript:void(0);"><i class="fa fa-cog"></i> {{'Account'|translate}}</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#/logout" ui-sref="master.logout"><i class="fa fa-sign-out"></i> {{'Logout'|translate}}</a></li>
+                    </ul>
+            </li>
+        </ul>
       </div>
     </div>
   </nav>
-  {{isAuth}}
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-  <div ui-view></div>
+  <div class="container" ui-view></div>
 
+
+  <div class="clearfix"></div>
   <div>BugyTrack: wersja <span app-version></span></div>
